--- a/blog.html
+++ b/blog.html
@@ -17,8 +17,8 @@
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/intro.html">My intro</a></li>
-                    <li><a href="/services.html">Services </a></li>
-                    <li><a href="/blog.html">Blog </a></li>
+                    <li><a href="/services.html">Education </a></li>
+                    <li><a href="/blog.html">Coding Profile </a></li>
                     <li><a href="/contact.html">Contact Me</a></li>
 
                 </ul>
@@ -26,30 +26,15 @@
 
         </div>
         <div class="main">
-             <div class="blogcontainer">
-                <h2>Blog by Rahul -the legend</h2>
-                <div class="blogitem">
-                    <h3>Learn coding in fun way</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde praesentium quos tempore assumenda quidem? Aliquid quasi similique laudantium nisi, nostrum vitae sit aut aperiam? Vero.</p>
-                    <button class="btn btn-sm"> Read more</button>
-                </div>
-            
-                <div class="blogitem">
-                    <h3>Learn coding in fun way</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde praesentium quos tempore assumenda quidem? Aliquid quasi similique laudantium nisi, nostrum vitae sit aut aperiam? Vero.</p>
-                    <button class="btn btn-sm"> Read more</button>
-                </div>
-
-                <div class="blogitem">
-                    <h3>Learn coding in fun way</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde praesentium quos tempore assumenda quidem? Aliquid quasi similique laudantium nisi, nostrum vitae sit aut aperiam? Vero.</p>
-                    <button class="btn btn-sm"> Read more</button>
-                </div>
-                <div class="blogitem">
-                    <h3>Learn coding in fun way</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde praesentium quos tempore assumenda quidem? Aliquid quasi similique laudantium nisi, nostrum vitae sit aut aperiam? Vero.</p>
-                    <button class="btn btn-sm"> Read more</button>
-                </div>
+             <div class="myintro">
+                <h2>My Coding Profile</h2>
+                <p>I love to do programming and i used to solve problems on Hackerrank and leetcode and I got 4 star in c++ and 5 Star in problem solving in hackerrank platform.I have done 100+ question in Leetcode.</p><br>
+                <div style="margin-left: 20px;">
+                  Hackerrank:  &nbsp &nbsp  <i class="fa fa-linkedin-square"></i>&nbsp<a href="https://www.hackerrank.com/pankajkr20052002?hr_r=1" target="_blank" >linkedin.com/in/pankaj-kumar-1a2b7a222/</a><br>
+                  Leetcode: &nbsp &nbsp<i class="fa fa-github"></i><a href="https://leetcode.com/Pankaj_99/" target="_blank"> leetcode.com/Pankaj_99/</a><br>
+                  Codechef - &nbsp &nbsp<i class="fa fa-twitter"></i>&nbsp<a href="https://www.codechef.com/users/pankaj_099" target="_blank"> codechef.com/users/pankaj_099</a><br>
+                   GFG - &nbsp &nbsp<i class="fa fa-twitter"></i>&nbsp<a href="https://auth.geeksforgeeks.org/user/pankajkiug0" target="_blank"> auth.geeksforgeeks.org/user/pankajkiug0</a><br>
+                </div>  
              </div>
         </div>
     </div>
