--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -17,8 +18,8 @@
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/intro.html">My intro</a></li>
-                    <li><a href="/services.html">Services </a></li>
-                    <li><a href="/blog.html">Blog </a></li>
+                    <li><a href="/services.html">Education </a></li>
+                    <li><a href="/blog.html">Coding Profile</a></li>
                     <li><a href="/contact.html">Contact Me</a></li>
 
                 </ul>
@@ -28,34 +29,17 @@
         <div class="main">
              <div class="contactform">
               <h1>Contact me for work/general enquries.</h1>
-                <form>
-                    <div class="email">
-                      <label for="client-email" class="form-control">Name</label>
-                      <input type="name" class="form-control" id="client-email" aria-describedby="emailHelp">
-                    </div>
-                    <div class="email">
-                      <label for="client-email" class="form-control">Email address</label>
-                      <input type="email" class="form-control" id="client-email" aria-describedby="emailHelp">
-                      <div id="emailHelp" class="form-text">We'll never share your email & phone with anyone else.</div>
-                    </div>
-                    <div class="phone">
-                      <label for="phone-no" class="form-level">phone</label>
-                      <input type="phone" class="form-control" id="phone-no">
-                    </div>
-                    <div class="email">
-                      <label for="client-email" class="form-control">Enqury</label>
-                      <input type="name" class="form-control" id="client-email" aria-describedby="emailHelp">
-                    </div>
-                    <div class="mb-3" id="form-check">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">I want to work on a project with you</label>
-                    </div>
-                    <button type="submit" class="btn btn-sm">Submit</button>
-                  </form>
+                <div style="margin-left: 20px;">
+                  Email - &nbsp &nbsp <i class="fa fa-envelope"></i> &nbsp pankajkumar75821@gmail.com </a><br>
+                  Linkedin Profile - &nbsp &nbsp  <i class="fa fa-linkedin-square"></i>&nbsp<a href="https://www.linkedin.com/in/pankaj-kumar-1a2b7a222/" target="_blank" >linkedin.com/in/pankaj-kumar-1a2b7a222/</a><br>
+                  Github Profile - &nbsp &nbsp<i class="fa fa-github"></i><a href="https://github.com/pankajkumar65 " target="_blank"> https://github.com/pankajkumar65</a><br>
+                  Twitter - &nbsp &nbsp<i class="fa fa-twitter"></i>&nbsp<a href="https://twitter.com/pankajkumar7581 " target="_blank"> twitter.com/pankajkumar65</a><br>
+                  Mobile Number - &nbsp &nbsp <i class="fa fa-phone">&nbsp</i>968045383 </a>
+                </div>     
              </div>
         </div>
     </div>
-
+    
 </body>
 
 </html>
