--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/intro.html">My intro</a></li>
-                    <li><a href="/services.html">Services </a></li>
-                    <li><a href="/blog.html">Blog </a></li>
+                    <li><a href="/services.html">Education </a></li>
+                    <li><a href="/blog.html">Coding Profile</a></li>
                     <li><a href="/contact.html">Contact Me</a></li>
 
                 </ul>
@@ -33,17 +33,15 @@
             <div class="developerinfo">
                 <div class="basicinfo">
                     <div class="hello">Hi I am</div>
-                    <div class="name">Rahul kumar</div>
-                    <div class="about">Developer,entrepreneur,Writer</div>
-                    <div class="moreabout">hello my name is rahul kumar and i am inrested in writting books,this is one
-                        of
-                        my hobby which i like most.</div>
+                    <div class="name">Pankaj kumar</div>
+                    <div class="about">Developer,Prolem Solver,Writer</div>
+                    <div class="moreabout">hello my name is pankaj kumar and i am inrested in solving coding problem,this is one of my hobby which i like most.</div>
                     <div class="buttons">
-                        <a href="/cv.txt" target="_blank"><button class="btn btn-d">Download CV</button></a>
+                        <a href="https://drive.google.com/file/d/1wGT1M7I4lKfg3vQyL0idVFVwNrQhmb04/view?usp=drivesdk" target="_blank"><button class="btn btn-d">Download Resume</button></a>
                         <a href="/contact.html"><button class="btn">Contact Me</button></a>
                     </div>
                 </div>
-                <div class="devpic"><img src="dev.png" alt="Ruhul kumar"></div>
+                <!-- <div class="devpic"><img src="dev.png" alt="Pankaj kumar"></div> -->
             </div>
         </div>
     </div>
