--- a/intro.html
+++ b/intro.html
@@ -17,8 +17,8 @@
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/intro.html">My intro</a></li>
-                    <li><a href="/services.html">Services </a></li>
-                    <li><a href="/blog.html">Blog </a></li>
+                    <li><a href="/services.html">Education </a></li>
+                    <li><a href="/blog.html">Coding Profile</a></li>
                     <li><a href="/contact.html">Contact Me</a></li>
 
                 </ul>
@@ -28,25 +28,37 @@
         <div class="main">
             <div class="myintro">
               <h2>About Me</h2>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam fugit exercitationem, veniam ipsa aliquam alias quas ea pariatur earum numquam unde et! Harum qui dicta tenetur dolorem voluptatibus, eum reiciendis est dolore nisi nesciunt.</p>
+              <p>Hi,My name is Pankaj kumar, i am from Sasaram Bihar and i am pursing my B.tech in computer science from GNIOT college, Greater Noida.Talking to my technical skills which include C, C++, Java, html, css, javascript and React js. I love to do programming and i used to do solve problems in online platfom like Hacker rank and got 5 star in problem solving.About my strength , I am a good listener and focused person towards my work and I always try to learn new things and new technology.In my free time I love to do playing volleyball, listening music, watching cricket.My short term goal is to get a job in reputated company and My long term goal is to achieve a good position in reputated company.
+              thank you.  
+              </p>
               <h2>Myskill</h2>
+              <div style="display: flex;justify-content: space-between"> 
               <div class="skillcontainer">
-                 HTML:<div class="skill hundred"></div>
-                 CSS:<div class="skill t5"></div>
-                 JAVASCRIPT:<div class="skill"></div>
-                 REACT:<div class="skill fifty"></div>
-                 PYTHON:<div class="skill hundred"></div>
+                <b>LANGUAGES<br>
+                C, C++ | Java | Javascript | Python<br><br>
+                TECHNOLOGY<br>
+                HTML | CSS<br><br>
+                FRAMEWORKS<br>
+                React.js | Express.js | Bootstrap<br><br>
+                TOOLS<br>
+                VSCode | Git | Postman APIs<br><br>
+                DATABASE<br>
+                MongoDB | MySQL<br><br>
+                BACKEND<br>
+                Node.js
               </div>
-              <h2>My Projects</h2>
-            <div class="projects">
+              <h2>My Projects- Verify <a href="https://github.com/pankajkumar65" target="_blank"> @Github</a> </h2>
+              <div class="projects" style="margin-right: 100px;margin-top:10px;">
                 <ol>
-                    <li>spotify clone</li>
-                    <li>portfolio Website</li>
-                    <li>Analog Clock</li>
-                    <li>Snake Game in Javascript</li>
-                    <li>Scientific Calculator</li>
+                    <li>Youtube clone &nbsp <a href="https://v-mode.netlify.app/" target="_blank"> Deployment Link</a></li>
+                    <li>Textutils - Text tool Web App &nbsp<a href="https://pankajkumar65.github.io/TextUtils/" target="_blank">Deployment Link</a></li>
+                    <li>INotebook - Online cloud Website for storing notes.</li>
+                    <li>NewsApp- Real time News application.</li>
+                    <li>Portfolio Website - A personal portfolio Website of my personal detail.</li>
+                    <li>Analog clock &nbsp <a href="https://pankajkumar65.github.io/Analog_CLock/" target="_blank">Deployment Link</a></li>
                 </ol>
             </div>
+        </div>
             </div>  
         </div>
     </div>
